# lib/model/usage.go
@@ -1,0 +1,30 @@
+/*
+ * Copyright 2026 InfAI (CC SES)
+ *
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ */
+
+package model
+
+// InstanceRef names an instance the caller may read.
+type InstanceRef struct {
+	Id   string `json:"id"`
+	Name string `json:"name"`
+}
+
+// ImportTypeUsage is the answer to "which instances use this import type": Instances counts the
+// instances of all users, Readable lists only those the caller may read.
+type ImportTypeUsage struct {
+	Instances int64         `json:"instances"`
+	Readable  []InstanceRef `json:"readable"`
+}
